delet circle mode and fix merge bug

--- a/src/drivers/px4io/CMakeLists.txt
+++ b/src/drivers/px4io/CMakeLists.txt
@@ -69,7 +69,7 @@ file(RELATIVE_PATH fw_io_bin_relative ${CMAKE_CURRENT_BINARY_DIR} ${fw_io_bin})
 
 add_custom_command(OUTPUT ${fw_io_bin}
 	COMMAND ${CMAKE_COMMAND} -E make_directory ${PX4_BINARY_DIR}/romfs_extras
-	COMMAND cp ${PX4_SOURCE_DIR}/data/geo_nofly.data  ${PX4_BINARY_DIR}/genromfs/${config_romfs_root}/extras/
+	COMMAND cp ${PX4_SOURCE_DIR}/data/geo_nofly.data  ${PX4_BINARY_DIR}/romfs_extras
 	COMMAND ${CMAKE_OBJCOPY} -O binary ${fw_io_exe_relative} ${fw_io_bin_relative}
 	DEPENDS ${fw_io_exe}
 	COMMENT "Copying ${config_io_board} to ROMFS extras"
