--- a/.gitmodules
+++ b/.gitmodules
@@ -20,8 +20,8 @@
 	branch = master
 [submodule "Tools/sitl_gazebo"]
 	path = Tools/sitl_gazebo
-	url = https://github.com/PX4/sitl_gazebo.git
-	branch = master
+	url = https://github.com/yl5006/sitl_gazebo.git
+	branch = ewt
 [submodule "src/lib/matrix"]
 	path = src/lib/matrix
 	url = https://github.com/PX4/Matrix.git
