--- a/platforms/nuttx/CMakeLists.txt
+++ b/platforms/nuttx/CMakeLists.txt
@@ -172,6 +172,8 @@ if (TARGET parameters_xml AND TARGET airframes_xml)
 				/dev/serial/by-id/usb-Bitcraze*
 				/dev/serial/by-id/pci-Bitcraze*
 				/dev/serial/by-id/usb-Gumstix*
+				/dev/serial/by-id/usb-EWT*
+				/dev/serial/by-id/usb-WAN*
 				/dev/serial/by-id/usb-YL*
 
 				)
